--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.11",
+    "styled-reset": "^4.5.2",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
