feat: 사이드바, 탭 메뉴 연결
- 사이드 바에서 메뉴를 선택하면 탭이 생성되도록 수정했습니다.
- 강의 시간표 조회 탭을 초기값으로 설정했습니다.
- 커스텀 훅으로 useSelector, useDispatch의 타입을 지정해놨습니다.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -33,6 +33,7 @@
       "@plugins/*": ["plugins/*"],
       "@apis/*": ["apis/*"]
     },
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
   "include": ["src", "src/custom.d.ts"]
