--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "redux-persist": "^6.0.0",
