--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           node-version: '20'
 
+      - name: .env setting
+        run: |
+          echo "VITE_BASE_URL=${{secrets.VITE_BASE_URL}}" >> .env.production
+          echo "VITE_GTM_ID=${{secrets.VITE_GTM_ID}}" >> .env.production
+
       - name: Install dependencies
         run: npm ci
 
