fix: 새로고침 후 page not found 에러 해결
- pakage.json 빌드 스크립트를 수정했습니다.
- 로컬에서 배포 테스트를 하기 위해 netlify cli를 사용하면서 .gitignore에 .netlify가 추가되었습니다.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc && vite build && echo /* /index.html 200 > dist/_redirects",
     "format": "prettier --write --cache .",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
     "preview": "vite preview"
